@@ -1,3 +1,9 @@
+2010-06-02  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
+	* kern/emu/hostdisk.c (convert_system_partition_to_system_disk)
+	[__NetBSD__]: Handle all device names matching /dev/r[a-z]+[0-9][a-z].
+	(find_partition_start) [__NetBSD__]: Correct error messages for NetBSD.
+
 2010-06-02  Colin Watson  <cjwatson@ubuntu.com>
 
 	* docs/grub.texi (Simple configuration): Fix copy-and-paste typo.
